--- a/MySecondApp.Library/MySecondApp.Library.csproj
+++ b/MySecondApp.Library/MySecondApp.Library.csproj
@@ -1,8 +1,12 @@
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.1"/>
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.1.1" />
+    <Content Include="Models\ApplicationSettings.cs" />
+    <Content Include="Repositories\IWordRepository.cs" />
+    <Content Include="Repositories\WordRepository.cs" />
   </ItemGroup>
 </Project>
