--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,9 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 **/Properties/launchSettings.json
+lcov.info
+coverage.json
+.vscode/
 
 # StyleCop
 StyleCopReport.xml
