--- a/MySecondApp.Console/MySecondApp.Console.csproj
+++ b/MySecondApp.Console/MySecondApp.Console.csproj
@@ -10,12 +10,14 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.1" />
     <Content Include="appsettings.json" CopyToOutputDirectory="Always" />
-    <Content Include="release.appsettings.json" CopyToOutputDirectory="Always" />
-    <Content Include="debug.appsettings.json" CopyToOutputDirectory="Always" />
     <Content Include="Program.cs" />
+    <Content Include="appsettings.debug.json" />
+    <Content Include="appsettings.release.json" />
   </ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <RuntimeIdentifiers>win10-x64;ubuntu-x64</RuntimeIdentifiers>
   </PropertyGroup>
 </Project>
